# KalmanFilter

./: CMakeLists.txt  README.md  config-1.txt  config-2.txt  config.txt  ekf.cpp  ekf.h  ekf_ctrv.cpp  ekf_ctrv.h  ekf_ctrv_geo.cpp  ekf_ctrv_geo.h  ground_truth_package.h  kf.cpp  kf.h  kf_Fusion.cpp  kf_Fusion.h  main.cpp  measurement_package.h  ukf.cpp  ukf.h
data/: 1.txt  1_obstacle.txt  EKF.html  Trajectory-lidar-2-1.txt  Trajectory-lidar-2.txt  error.html  output.txt  output2.txt  plot-scatter.py  plot.py  plot1.py  plot2.py  plot3.py  plot_EKF_Scatter_Simulation.py  plot_radar_est.py  误差.xlsx  调参.bat
data/local/: Trajectory_9.04_car.txt
data/局部坐标/: Trajectory-lidar.txt  Trajectory-radar-2.txt  Trajectory-radar-3-1.txt  Trajectory-radar-4.txt  Trajectory_9.04_car2.txt  Trajectory_9.04_car4.txt  Trajectory_9.26_bicycle-1.txt  Trajectory_9.26_bicycle.txt  Trajectory_9.26_bicycle_1.txt  Trajectory_9.26_bicycle_2.txt
